--- a/JS.html
+++ b/JS.html
@@ -1,52 +1,83 @@
 <DCOTYPE html> 
             <head>
 
-                <a href="#">Link 0 </a>
-                <a href="#">Link 1 </a>
-                <a href="#">Link 2 </a>
-                <a href="#">Link 3 </a>
-                <a href="#">Link 4 </a>
 
 
         </head>
 
 
                             <body>
-
+                                    <input type="text" id="username" placeholder="Choose Username">
+                                    <input type="password" id="password" placeholer="Choose Password">
+                                    <button type="button" onclick="getInfo()">Click Me</button>
                                 <script>
 
-                                        var links = document.getElementsByTagName("a");
-                                        for(i = 0; i < links.length; i++){
+                                                var objPeople = [
+	{ 
+		username: "chris",
+		password: "tom"
+	},
+	{ 
+		username: "matt",
+		password: "academy"
+	},
+	{ 
+		username: "chris",
+		password: "forever"
+	}
 
-                                            links[i] .className ="link-" + i;
-                                        }
-                                     
-                                      var myList = ['apples', 'bananas','oranges'];
-                                      myList.forEach(function(vaule,index){
-                                          
-                                   return(vaule,index);
+]
 
-                                      });
-                                      /// while for loop practice
-                                      var times = 0;
-                                      while (times < 10){
-                                          console.log('tried it',times);
-                                          times++;
-                                      }
-                                      /// do loop does the samething as the code above
-                                      do{
-                                          console.log('tried it',times);
-                                        times++;
+function getInfo() {
+	var username = document.getElementById('username').value
+	var password = document.getElementById('password').value
 
-                                      } while(times < 10); 
+	for(var i = 0; i < objPeople.length; i++) {
 
-                                      /// for loop below
-                                        mylist =['Apples','Oranges','bananas'];
-                                      for(var i = 0; i < mylist.length; i++){
+		if(username == objPeople[i].username && password == objPeople[i].password) {
+			console.log(username + " is logged in!!!")
+            alert("Welcome");
+			
+			return
+		}
+	}
+	console.log("incorrect username or password")
+    alert("incorrect username or password!");
+}
+			// if number didvisible by 3 fiss 
+			// if number didvisible by 5 buzz 
+			// if number didvisible by both fizz buzz
 
-                                            console.log(mylist[i]);
-                                      }
+			for(i =0; i <=100; i++){
 
+				 if (i % 3 == 0 && i % 5 == 0){
+
+					console.log('fizzbuzz' + i);
+			}
+
+			}
+			
+			if  (i % 3 == 0){ 
+				console.log('fizz' + i);
+
+			}
+			else if(i % 5 == 0){
+
+				console.log('buzz' + i);
+			}
+						// practice fizzbuzz with different numbers from the top one
+						for (i = 0; i <= 1000; i++) {
+							if( i % 10 == 0 && i % -15 == 0){
+
+								console.log('buzzfizz' + i);
+							}
+							if ( i % 10 == 0){
+								console.log('buzz');
+							}
+							else if (i % -15 == 0){
+								console.log('fizz');
+							}
+						}
                                     </script>
 
 
